Fix logo spacing

--- a/themes/al-2018/static/scss/_navigation+logo.scss
+++ b/themes/al-2018/static/scss/_navigation+logo.scss
@@ -120,8 +120,12 @@ header {
 
         @include MQ(M) {
             width: 30vw;
-            max-width: calc(#{$max-component-width} * 0.3);    
-            padding-top: 20px;
+            max-width: calc(#{$max-component-width} * 0.3);
+            padding-top: 4vw;
+        }
+
+        @include MQ(L) {
+            padding-top: calc(#{$max-component-width} * 0.04);
         }
 
         img {
